added search for Game,User,Team